# DBT_Northwind-SQL-Analytics-

./: README.md  pyproject.toml
northwind/: dbt_project.yml
northwind/models/marts/: vendas.sql
northwind/models/staging/: _crm__models.yml  stg_customers.sql
northwind/models/staging/crm/: srg_crm__nova_tabela.sql
northwind/seeds/: nova_tabela.csv
